# .config

./: .Xresources  .gitignore  README.md  dolphinrc  libinput-gestures.conf  picom.conf  picom_focus.conf
alacritty/: alacritty.yml
bat/: config
bpython/: config
bpytop/: bpytop.conf
bspwm/: allo  bspwmrc  noswallow  startup.sh  terminals
copyq/: copyq-bak.conf  copyq-commands.ini  copyq.conf  copyq.pub  copyq_geometry.ini  copyq_no_session.ini  copyq_tabs.ini
fish/: config.fish  fish_variables  fish_variables.back
hypr/: hypridle.conf  hyprland.conf  hyprland.conf.bak-20260324-102057  hyprlock.conf  hyprpaper.conf  hyprpaper.conf.bak-20260324-102057
ironbar/: config.corn  config.yaml  exemple.css  net_speed.sh  style.css  workspace-icons
kitty/: kitty.conf  kitty.conf.bak
nvim/: ginit.vim  init.lua  init.vim  init.vim.old  pyproject.toml
nvim/extra_funcs/: warp.vim
nvim/lua/: functions.lua  mappings.lua  options.lua
omf/: bundle
polybar/: a  backupp  config  config.ini  launch.sh
rofi/: catppuccin-mocha.rasi  new.rasi  slate.rasi  tab_menu.rasi  test.rasi
scripts/: aur-check  class  class_over  class_start  crontab_test  dummy  float_next  float_next.sh  gpt_ping  grab-dualsense.sh  grab-dualsensev2.sh  hyprlock_empty_then_restore.sh  img.sh  makefloat  monitor.sh  move_to_preselect  preselect_overlay  stupid  (+10 more)
scripts/SD/: check11.py  cna.py  ctrlnet_detect  headers_horde.json  new.json  parse_to_horde.py  payload.json  payload_cn.json  payload_example.json  payload_horde.json  pyproject.toml  requirements.txt  send_hord  send_sd  test_img.py
(+74 files in other folders)
