[tool.poetry]
name = "nvim"
version = "0.1.0"
description = ""
authors = ["AmdaUwU <jbat2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
neovim = "^0.3.1"
yapf = "^0.32.0"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
